@@ -81,11 +81,10 @@ res = ob.checkConsistency()\n
 if res:\n
   msg= \'The document is not consistent:<br/>\'\n
   msg += \'<br/>\'.join(\'- \' + str(r.message) for r in res)\n
-  #state_change.kwargs.set(\'consistency_state\',\'missing\')\n
+  context.portal_workflow.doActionFor(ob, \'process\', comment=\'consistency check failed\')\n
   raise ValidationFailed(msg)\n
 else:\n
-  pass\n
-  #state_change.kwargs.set(\'consistency_state\',\'good\')\n
+  context.portal_workflow.doActionFor(ob, \'process\', comment=\'consistency ok\')\n
 
 
 ]]></string> </value>
@@ -137,6 +136,7 @@ else:\n
                             <string>ob</string>
                             <string>res</string>
                             <string>msg</string>
+                            <string>context</string>
                           </tuple>
                         </value>
                     </item>
