@@ -9,7 +9,7 @@ External Library File | external_document_publication_workflow
 External Web Page | edit_workflow
 External Web Page | external_document_interaction_workflow
 External Web Page | external_document_publication_workflow
-External Web Page | external_processing_workflow
+External Web Page | processing_status_workflow
 File | dms_file_interaction_workflow
 File | document_publication_workflow
 File | edit_workflow
@@ -37,6 +37,6 @@ Spreadsheet | ooo_interaction_workflow
 Text | dms_file_interaction_workflow
 Text | document_publication_workflow
 Text | edit_workflow
-Text | external_processing_workflow
 Text | local_permission_interaction_workflow
 Text | ooo_interaction_workflow
+Text | processing_status_workflow
