@@ -3,6 +3,6 @@ document_publication_workflow
 document_staging_workflow
 external_document_interaction_workflow
 external_document_publication_workflow
-external_processing_workflow
 local_permission_interaction_workflow
 ooo_interaction_workflow
+processing_status_workflow
