@@ -1,3 +1,6 @@
+2007-02-03
+Reimplemented again, to use processing status workflow for everything.
+
 2007-01-29
 Reimplemented validation flag as publication workflow variable.
 
